# zapper-debank-rebalance-calculator

./: .gitignore  Dockerfile  README.md  __init__.py  apr_calculator.py  debank.json  docker-entrypoint.sh  main.py  nginx.conf  package-lock.json  package.json  portfolio_config.py  pyproject.toml  routes.py  sharpe-ratio.py  zapper.json
.github/workflows/: ci.yaml
adapters/: networth_to_balance_adapter.py
apr_utils/: __init__.py  apr_calculator.py  apr_pool_optimizer.py  utils.py
coingecko/: governance-ohm.json.sample
dashboard/: debank.json
handlers/: __init__.py  debank_handler.py  nansen_handler.py  utils.py  zapper_handler.py
metrics/: historical_price_reader.py  lp_token.py  max_drawdown.py  sharpe_ratio.py  utils.py
rebalance_strategies/: __init__.py  all_weather_portfolio.py  base_portfolio.py  new-log-multiply-composition.json  new-log.json  old-log.json  permanent_portfolio.py  quadratic.py  utils.py
search_handlers/: __init__.py  jaccard_similarity_handler.py  ngram_handler.py
tests/: test_search_handler.py
utils/: exchange_rate.py  position.py
