[tool.poetry]
name = "zapper-rebalance-calculator"
version = "0.1.0"
description = ""
authors = ["davidtnfsh <davidtnfsh@gmail.com>"]
readme = "README.md"
packages = [{include = "zapper_rebalance_calculator"}]

[tool.poetry.dependencies]
python = "^3.9"
black = "^23.1.0"
isort = "^5.12.0"
ngram = "^4.0.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
