[tool.poetry]
name = "zapper-rebalance-calculator"
version = "0.1.0"
description = ""
authors = ["davidtnfsh <davidtnfsh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ngram = "^4.0.3"
pandas = "^2.0.0"
flask = "^2.2.3"
python-dotenv = "^1.0.0"
flask-caching = "^2.0.2"
flask-cors = "^3.0.10"
requests = "^2.30.0"
tenacity = "^8.2.3"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
